# pdfviewer

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY_2025-10-30.md  PERFORMANCE_OPTIMIZATIONS.md  PRD.md  README.md  SEARCH_IMPLEMENTATION.md  SECURITY_FINDINGS.md  SECURITY_SUMMARY.md  SUPPORT.md  TEST_REFACTORING_SUMMARY.md  TODO.md  agents.md  check-all.sh  mypy.ini  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest-parallel.ini  pytest.ini  run_tests.sh  test_pdf_header.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: __init__.py  health.py  load_url.py  pdf.py  upload.py
backend/app/core/: __init__.py  logging.py
backend/app/middleware/: __init__.py  logging.py
backend/app/models/: __init__.py  pdf.py
backend/app/services/: __init__.py  pdf_service.py
backend/app/utils/: __init__.py  api_logging.py  content_disposition.py  decorators.py  http_client.py  logger.py  validation.py
backend/uploads/: README.md
configs/: Makefile  mypy.ini  playwright.config.ts  pyproject.toml  swagger.yaml
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LOGGING.md  OPTIMIZATION_2025_10_30.md  PERFORMANCE.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_IMPROVEMENTS_2025_10_30.md  PRD.md  REFACTORING_SUMMARY.md  SEARCH_IMPLEMENTATION.md  SECURITY.md  TECHNICAL.md  TECHNICAL_DEBT.md
docs/summaries/: OPTIMIZATION_FIXES_SUMMARY.md  OPTIMIZATION_SUMMARY.md  REFACTORING_DUPLICATION_SUMMARY.md  REFACTORING_SUMMARY.md  REFACTORING_SUMMARY_2025-10-30.md  SECURITY_SUMMARY_REFACTORING.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: TestPDFLoader.tsx
frontend/src/hooks/: useFileUpload.ts  usePDFDocument.ts  usePDFSearch.ts
frontend/src/services/: api.ts  pdfService.ts
frontend/src/test/: pdfMockHelpers.ts  setup.ts
frontend/src/theme/: materialTheme.ts
frontend/src/types/: annotation.types.ts  pdf.types.ts
frontend/src/utils/: canvasRenderer.ts  devLogger.ts
scripts/: README.md  apply_test_markers.py  ci_test_runner.py  run_tests_parallel.py  test_dashboard.py  test_metrics_collector.py  test_pdf_header.py  test_report_generator.py
tests/: MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  STRUCTURE_VISUALIZATION.md  TEST_ORGANIZATION.md  conftest.py  conftest_parallel.py  test_anyline_sample.py  test_api_logging.py  test_core_logging.py  test_dependencies.py  test_epa_sample.py  test_health.py  test_http_client.py  test_load_url_api_comprehensive.py  test_logging_middleware.py  test_middleware_logging_comprehensive.py  test_nhtsa_form.py  test_pdf_api_comprehensive.py  test_pdf_endpoints.py  test_pdf_service.py  test_pdf_service_comprehensive.py  test_princexml_sample.py  test_pydantic_models.py  test_upload.py  test_utils_logger_comprehensive.py  test_validation.py  test_weblite_sample.py
tests/config/: __init__.py  test_constants.py
tests/e2e/: RESILIENT_TESTING.md  playwright.config.resilient.ts
tests/e2e/fixtures/: sample-pdfs.ts  test-files.ts
tests/e2e/helpers/: mock-pdf-server.ts  wait-helpers.ts
tests/e2e/pages/: UploadPage.ts  ViewerPage.ts
tests/e2e/tests/: test_pdf_loader.spec.ts  test_pdf_loader_local.spec.ts  test_search_functionality.spec.ts  test_upload_flow.spec.ts  test_viewer_features.spec.ts
tests/e2e/workflows/: test_pdf_samples_unified.py
tests/helpers/: __init__.py  mock_helpers.py  mock_optimization.py  test_assertions.py  test_data_factories.py
tests/integration/: README.md  conftest.py  test_princexml_sample.py  test_sample_pdfs.py
tests/integration/api/: test_error_handling.py  test_health.py  test_load_url.py  test_load_url_api_comprehensive.py  test_pdf_api_comprehensive.py  test_pdf_workflow.py  test_performance.py  test_upload.py
tests/samples/: test_anyline_sample.py  test_weblite_sample.py
(+51 files in other folders)
